# orpheus

./: .dependency-cruiser.cjs  .gitignore  .impeccable.md  .jscpd.json  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  commitlint.config.js  commitlint.config.mjs  components.json  doctor.config.ts  electron-builder-dev.yml  electron-builder-wt.yml  electron-builder-xterm.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index-DnRfibXQ.js  knip.json  package.json  release-notes.md  release-please-config.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-push
docs/: CODE_QUALITY.md  README.md  deferred.md  future-scope.md  libghostty-scouting.md  libraries.md  plan.md  queue.md  spike-3-zorder.md  tauri-migration-handoff.md  user-preferences.md  wireframes-summary.md
old-plans/: future-scope.md  plan.md  wireframes-v0.5.md
resources/: orpheus-claude.sh  orpheus-pane.sh
scripts/: build-native.mjs  bump-libghostty.mjs  check-overlay-discipline.mjs  diag.ts  fetch-ghostty.sh  fetch-libghostty.sh  fetch-zig.sh  install-mac-dev.mjs  install-mac.mjs  orpheus-cask.template.rb  release-changelog.sh  release.mjs  smoke-db-migrations.ts  verify-aliases.ts  verify-cli-flags.ts  verify-contrast.mjs  verify-creation-provider-menu.ts  verify-effort-levels.ts  verify-loading-overlay.ts  verify-migration-engine.ts  verify-model-picker-icons.ts  verify-model-picker.ts  verify-model-refresh.ts  verify-model-registry.ts  verify-new-workspace-menu.ts  verify-oauth.ts  verify-overlay-dismissal.ts  verify-overlay-window-api-purity.ts  verify-providers.ts  verify-refresh-models-button.ts  verify-routing-proxy.ts  verify-routing.ts  verify-session-status.ts  verify-split-tree.ts  verify-workbench-reducer.ts
tauri-app/: Cargo.toml  index.html  (+3 more)
tauri-app/crates/ghostty-native/: Cargo.toml  build.rs
tauri-app/crates/ghostty-native/src/: app.rs  dispatch.rs  display_link.rs  ffi.rs  lib.rs  surface.rs  view.rs
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: claude_agents.rs  claude_auth.rs  claude_hooks.rs  claude_project_settings.rs  claude_settings.rs  claude_workspace_settings.rs  commands.rs  context_menu.rs  db.rs  git.rs  lib.rs  main.rs  mcp.rs  orpheus_notify.rs  os_notifications.rs  projects.rs  sessions.rs  ui_state.rs  util.rs  workspaces.rs
tauri-app/src-tauri/src/commands/: app.rs  claude_agents.rs  claude_auth.rs  claude_hooks.rs  claude_project_settings.rs  claude_settings.rs  claude_workspace_settings.rs  config.rs  context_menu.rs  doctor.rs  events.rs  git.rs  mcp.rs  mod.rs  os_notifications.rs  projects.rs  sessions.rs  terminal.rs  tests.rs  ui_state.rs  window.rs  workspaces.rs
tauri-app/src-tauri/src/ghostty/: mod.rs  state.rs  surface.rs
(+592 files in other folders)
