[package]
name = "orpheus-tauri-spike"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "orpheus_tauri_spike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orpheus-tauri-spike"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
thiserror = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
notify-rust = "4"
ghostty-native = { path = "../crates/ghostty-native" }
opener = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"

[profile.dev]
panic = "abort"
