[package]
name = "ghostty-native"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = "0.71"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString", "NSThread"] }
objc2-app-kit = { version = "0.3", features = [
    "NSView",
    "NSWindow",
    "NSApplication",
    "NSResponder",
    "NSEvent",
    "NSTrackingArea",
] }
